--- a/00_new_page/index.html
+++ b/00_new_page/index.html
@@ -129,7 +129,7 @@
               <div class="custom-row custom-row--actions">
                 <div id="customPresetsContainer" class="custom-presets"></div>
               </div>
-            </div></div></div>
+            </div></div>
           </div>
         </section>
 
